extensions/UsabilityInitiative/EditToolbar/EditToolbar.css
/* CSS StyleSheet for Toolbar extensions */

/* MEDIAWIKI DEPENDENT ID */
textarea#wpTextbox1 {
	border: solid silver 1px;
}
/* ... */
div#edittoolbar {
	width: 100%;
	padding: 0.1em;
	border: solid silver 1px;
	border-bottom-width: 0;
	margin-bottom: -1px;
	background-color: #EEEEEE;
}
div#edittoolbar div.tabs,
div#edittoolbar div.group {
	float: left;
	height: 26px;
	margin: 3px;
	padding-left: 3px;
	border-left: solid 1px #DDDDDD;
}
div#edittoolbar div.group:first-child {
	border-left: none;
}
body.rtl div#edittoolbar div.tabs,
body.rtl div#edittoolbar div.group {
	float: right;
	padding-left: 0;
	padding-right: 3px;
	border-left: none;
	border-right: solid 1px #DDDDDD;
}
body.rtl div.group:first-child {
	border-right: none;
}
div#edittoolbar div.sections {
	float: left;
	width: 100%;
	clear: both;
}
body.rtl div#edittoolbar div.sections {
	float: right;
}
div#edittoolbar div.sections > div.section {
	display: none;
	float: left;
	width: 100%;
	border-top: solid 1px #DDDDDD;
}
body.rtl div#edittoolbar div.sections > div.section {
	float: right;
}
div#edittoolbar div.group > div.label {
	float: left;
	border: 0px;
	height: 22px;
	line-height: 22px;
	margin: 2px;
	margin-left: 5px;
	margin-right: 8px;
	color: #777777;
	cursor: default;
}
body.rtl div#edittoolbar div.group > div.label {
	float: right;
	margin-left: 8px;
	margin-right: 5px;
}
div#edittoolbar div.group > img {
	float: left;
	border: 0px;
	height: 22px;
	width: 22px;
	padding: 2px;
	cursor: pointer;
}
body.rtl div#edittoolbar div.group > img {
	float: right;
}
div#edittoolbar div.group > select {
	float: left;
	margin: 2px;
	height: 22px;
	cursor: pointer;
}
body.rtl div#edittoolbar div.group > select {
	float: right;
}
div#edittoolbar div.tabs > div.tab {
	float: left;
	line-height: 26px;
}
body.rtl div#edittoolbar div.tabs > div.tab {
	float: right;
}
div#edittoolbar div.tabs > div.tab > a,
div#edittoolbar div.tabs > div.tab > a:visited {
	padding-left: 18px;
	padding-right: 12px;
	display: block;
	height: 26px;
	cursor: pointer;
	color: #00528C;
	background-image: url(images/arrow-right.png);
	background-position: left center;
	background-repeat: no-repeat;
}
body.rtl div#edittoolbar div.tabs > div.tab > a,
body.rtl div#edittoolbar div.tabs > div.tab > a:visited {
	padding-left: 12px;
	padding-right: 18px;
	background-position: right center;
}
div#edittoolbar div.tabs > div.tab > a.current,
div#edittoolbar div.tabs > div.tab > a.current:visited {
	color: #333333;
	background-image: url(images/arrow-down.png);
}
div#edittoolbar div.tabs > div.tab > a.current:hover {
	text-decoration: none;
}

